dbus (1.4.8-4) UNRELEASED; urgency=low

  * Use a separate build directory
  * Explicitly set compiler flags
  * Don't complain about not installing libdbus-1.la
  * Don't pass a version to dh_makeshlibs -V - the symbols file gives us
    exact dependencies, so the legacy shlibs mechanism is just a guard against
    old systems now, and everyone forgets to update it

 -- Simon McVittie <smcv@debian.org>  Wed, 01 Jun 2011 14:08:58 +0100

dbus (1.4.8-3) unstable; urgency=low

  * libdbus-1-3 Breaks versions of kdebase-workspace-bin and kde-window-manager
    that suffer from #623492, so partial upgrades don't make KDE unusable
    (Closes: #624333)
  * Policy 3.9.2 (no changes required)
  * De-duplicate short descriptions
  * Add DEP-3 metadata to 01_no-fatal-warnings.patch

 -- Simon McVittie <smcv@debian.org>  Wed, 27 Apr 2011 16:11:18 +0100

dbus (1.4.8-2) unstable; urgency=low

  * Remove jquery.js at the right location
  * Re-upload with non-broken .changes file

 -- Simon McVittie <smcv@debian.org>  Tue, 19 Apr 2011 09:15:04 +0100

dbus (1.4.8-1) unstable; urgency=low

  * New upstream version
    - Use upstream-merged support for installing HTML docs
    - Use upstream-supplied doxygen_to_devhelp.xsl (the Automake integration
      is still a bit broken, so we build it ourselves)
  * Mark dbus, dbus-x11 as Multi-Arch: foreign
  * Remove the unused copy of jquery.js that doxygen now wants to install
  * Move HTML and text documentation from /u/s/d/dbus-1-doc to /u/s/d/dbus
    (see Policy bug #107073 for discussion), leaving behind symlinks to their
    historical locations; this also results in shipping one copy of
    dbus-specification.html rather than two
  * Correctly credit Michael for his changes in the previous changelog entry

 -- Simon McVittie <smcv@debian.org>  Mon, 11 Apr 2011 16:22:48 +0100

dbus (1.4.6-1) unstable; urgency=low

  [ Michael Biebl ]
  * Switch from cdbs to dh.
  * Bump debhelper compatibility level to 8.