@@ -10,6 +10,7 @@ Uploaders: Sjoerd Simons <sjoerd@debian.org>,
 Build-Depends: autotools-dev,
                debhelper (>= 8),
                doxygen,
+               dpkg-dev (>= 1.16.0~ubuntu4),
                libexpat-dev,
                libselinux1-dev [linux-any],
                libx11-dev,
