@@ -1,0 +1,12 @@
+dbus (1.4.8-4) UNRELEASED; urgency=low
+
+  Versions of libdbus, dbus-daemon etc. with debugging, verbose output
+  and self-tests enabled are now installed in
+  /usr/lib/`dpkg-architecture -qDEB_HOST_MULTIARCH`/dbus-1.0/debug-build
+  for use in debugging D-Bus-related issues.
+
+  The debug versions of dbus-daemon etc. can be used by adding the bin
+  directory to the PATH, while the debug version of libdbus can be used via
+  LD_PRELOAD or by adding the lib directory to the LD_LIBRARY_PATH.
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 01 Jun 2011 14:18:00 +0100
