@@ -1,0 +1,2 @@
+debian/tmp/usr/lib/*/dbus-1.0/debug-build/bin
+debian/tmp/usr/lib/*/dbus-1.0/debug-build/lib
